src/routes/game/components/elements/cardPortal/CardPortal.module.css
.popUpContainer {
  position: fixed;
  z-index: 2000;
  height: 53vh;
  height: 53dvh;
}

.popUp {
  padding: 1vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.defaultPos {
  right: 200px;
  top: 10vh;
}

.img {
  height: 50vh;
  display: block;
  max-width: 100%;
  max-height: 100%;
}

.popUpInside {
  z-index: 111;
}

.doubleFacedCard {
  position: absolute;
  left: -40vh;
}


@media (orientation: portrait) {
  .popUpContainer {
    bottom: auto !important;
    right: auto !important;
    left: auto !important;
    top: auto !important;
    height: 90dvh !important;

    pointer-events: none;
    background: url('../../../../../img/backgrounds/transparent-card.png');
  }

  .img {
    height: 40dvh;
  }

  .doubleFacedCard {
    position: static;
  }
}

